version 6.4.2
Modified the plotting in fitter so that scaling is always applied

version 6.4.1
Fixed a packaging problem on pypi and conda-forge
No changes to source code

version 6.4.0
Removed the imageio-ffmpeg download code added pip install dependence instead
Updated the installation instructions on the documentation to reflect conda-forge installation
Added environment variables to control threading and number of cpus
Made the refractive_index_medium variable real (not complex) to remove the warning message from PyMieScatt

Version 6.3.1
Solved packaging issues ready for release on PyPi

Version 6.3.0
Added ability to request fewer cpus for parallel computation.  Also can now switch to threading model if necessary.  
Restructured directory structure to be consistent with setup.py
Changed the spreadsheet checking so that 'Settings' is not included - problems with checking degenerate systems
Changed the threshold in checkcsv to 3E-2.  All tests now pass.
Created commands in the root directory which should be similar to those created by a pip installation - pdgui, preader

Version 6.2
Treats the case of a support matrix with spherical inclusions. The scattering from the inclusions is accounted for by Mie theory. The resulting effective permittivity is used in the calculation of the effective permittivity of the active dielectric in the matrix. In addition the following features have been added;

    the sign of the imaginary component of the Mie permittivity is now consistent with Bruggeman and Maxwell-Garnett methods
    a Hodrick-Prescott filter performs a baseline correction to the experimental spectrum in the Fitter tab.
    saving a script has been modified to improve the scripts robustness
    various other minor bugs have been fixed

Version 6.1